--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div class="loader"><h1>Carregando...</h1></div>
 
-  <webview class="hide" preload="./preload.js" src="https://ftalk-front.finercloud.com/?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzaXN0ZW1hX2lkIjo5OCwidXN1YXJpb19pZCI6NDAzLCJlbWFpbCI6ImVyaWNrc29uLnR1bGlvQGZpbmVyLmNvbS5iciIsIndlYiI6dHJ1ZSwiaWF0IjoxNTQ3NDAwNzUxfQ.F2YmVvHQV1fsNDNZsNGIUql-fl9MS6Sn3qx_fp4TtyU"></webview>
+  <webview class="hide" preload="./preload.js" src="http://ftalk-front.finercloud.com/"></webview>
 
   <script>require('./hybrid-renderer');</script>
 
