--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div class="loader"><h1>Carregando...</h1></div>
 
-  <webview class="hide" preload="./preload.js" src="http://ftalk-front.finercloud.com"></webview>
+  <webview class="hide" preload="./preload.js" src="http://192.168.10.78:3000"></webview>
 
   <script>require('./hybrid-renderer');</script>
 
